# hip

./: hip.cabal
src/: example.hs
src/Hip/: BBox.hs  ColorAdjust.hs  ColorSpace.hs  Composite.hs  Generator.hs  Histogram.hs  Image.hs  ImageLoader.hs  ImageSaver.hs  Lift.hs  PointSpace.hs  Stencil.hs  Transform.hs
src/Hip/Color/: Composite.hs  Types.hs
src/Hip/Filter/: Median.hs
