Name:                hip
Version:             0.1
Author:              Phaedon Sinis
Category:            Graphics
Build-type:          Simple

Cabal-version:       >=1.2


library
  exposed-modules: Hip.ColorSpace Hip.PointSpace
    Hip.Lift 
    Hip.Image 
    Hip.Generator
    Hip.ImageLoader 
    Hip.ImageSaver
    Hip.Transform
    Hip.Stencil
  build-depends:   base, ohiio, vector, bytestring
  hs-source-dirs:  src src/Hip 
  ghc-options:     -Wall -Werror -rtsopts
  extra-libraries: HSohiio-0.1
  extra-lib-dirs: /Users/phaedon/Library/Haskell/ghc-7.0.3/lib/ohiio-0.1/lib


Executable example
 Main-is:	example.hs
 hs-source-dirs: src
 Build-depends: base, ohiio
 Other-modules: Hip.ImageLoader
 -- don't forget to add back -Werror
 ghc-options: -Wall -rtsopts
 extra-libraries: HSohiio-0.1
 extra-lib-dirs: /Users/phaedon/Library/Haskell/ghc-7.0.3/lib/ohiio-0.1/lib
