Name:                hip
Version:             0.1
Author:              Phaedon Sinis
Category:            Graphics
Build-type:          Simple

Cabal-version:       >=1.2


library
  exposed-modules: 
    Hip.ColorSpace 
    Hip.PointSpace
    Hip.BBox
    Hip.Lift 
    Hip.Image 
    Hip.Generator
    Hip.ImageLoader 
    Hip.ImageSaver
    Hip.Buffer
    Hip.Transform
    Hip.Stencil
    Hip.Histogram
    Hip.Filter.Median
  build-depends:   base, ohiio, vector, bytestring, containers, criterion
  hs-source-dirs:  src src/Hip src/Hip/Filter
 -- don't forget to add back -Werror
  ghc-options:     -Wall -rtsopts -O
  extra-libraries: HSohiio-0.1
  extra-lib-dirs: /Users/phaedon/Library/Haskell/ghc-7.2.1/lib/ohiio-0.1/lib


Executable example
 Main-is:	example.hs
 hs-source-dirs: src
 Build-depends: base, ohiio
 Other-modules: Hip.ImageLoader
 -- don't forget to add back -Werror
 ghc-options: -Wall -rtsopts
 extra-libraries: HSohiio-0.1
 extra-lib-dirs: /Users/phaedon/Library/Haskell/ghc-7.2.1/lib/ohiio-0.1/lib
